[package]
name = "websocket-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.3"
bytes = "1.3"
thiserror = "1"
rand = "0.8.1"
base64 = "0.21.0"
sha1 = { version = "0.10", optional = true }

[dev-dependencies]
criterion = "0.4.0"