[package]
name = "websocket-server"
version = "0.1.0"
edition = "2021"

[dependencies]
hyper = { version = "1.0.0-rc.2", features = ["full"] }
tokio = { version = "1.24.1", features = ["full"] }
websocket-core = {path = "../websocket-core"}
thiserror = "1"
tokio-codec = "0.2.0-alpha.6"
http-body-util = "0.1.0-rc.2"